--- a/pom.xml
+++ b/pom.xml
@@ -87,5 +87,10 @@
             <artifactId>spring-orm</artifactId>
             <version>4.3.6.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>4.3.6.RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
