--- a/pom.xml
+++ b/pom.xml
@@ -92,5 +92,10 @@
             <artifactId>spring-test</artifactId>
             <version>4.3.6.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.25</version>
+        </dependency>
     </dependencies>
 </project>
