--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,9 @@
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.194.4:3306/F_CL_ENTERPRISE_DB?useUnicode=true&characterEncoding=UTF-8
+jdbc.driverClassName=com.mysql.cj.jdbc.Driver
+#jdbc.url=jdbc:mysql://192.168.194.4:3306/F_CL_ENTERPRISE_DB?useUnicode=true&characterEncoding=UTF-8
+#jdbc.username=root
+#jdbc.password=zhirong123
+jdbc.url=jdbc:mysql://127.0.0.1:3306/superdb?useUnicode=true&characterEncoding=UTF-8
 jdbc.username=root
-jdbc.password=zhirong123
-
+jdbc.password=1234567
 redis.url=127.0.0.1
 redis.port=6379
